[package]
name = "dmdoc"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
homepage = "https://github.com/SpaceManiac/SpacemanDMM/blob/master/crates/dmdoc/README.md"
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
pulldown-cmark = "0.9.3"
maud = "0.25.0"
walkdir = "2.4.0"
git2 = { version = "0.18.1", default-features = false }

[dev-dependencies]
walkdir = "2.4.0"

[build-dependencies]
chrono = "0.4.31"
git2 = { version = "0.18.1", default-features = false }
