[package]
name = "dmdoc"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
homepage = "https://github.com/SpaceManiac/SpacemanDMM/blob/master/crates/dmdoc/README.md"
edition = "2024"

[dependencies]
dreammaker = { path = "../dreammaker" }
pulldown-cmark = "0.9.6"
maud = "0.27.0"
walkdir = "2.5.0"
git2 = { version = "0.20.2", default-features = false }

[dev-dependencies]
walkdir = "2.5.0"

[build-dependencies]
chrono = "0.4.41"
git2 = { version = "0.20.2", default-features = false }
