[package]
name = "dmm-tools-cli"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "BYOND map rendering and analysis tools powered by SpacemanDMM"
edition = "2021"

[[bin]]
name = "dmm-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
rayon = "1.8.1"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../dmm-tools" }
ahash = "0.8.8"

[build-dependencies]
chrono = "0.4.34"
git2 = { version = "0.18.2", default-features = false }
