[package]
name = "dmm-tools-cli"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "BYOND map rendering and analysis tools powered by SpacemanDMM"
edition = "2021"

[[bin]]
name = "dmm-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
rayon = "1.10.0"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../dmm-tools" }
ahash = "0.8.11"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.18.3", default-features = false }
