[package]
name = "dmm-tools-cli"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "BYOND map rendering and analysis tools powered by SpacemanDMM"
edition = "2021"

[[bin]]
name = "dmm-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.141"
rayon = "1.10.0"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../dmm-tools" }
ahash = "0.8.12"

tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[build-dependencies]
chrono = "0.4.41"
git2 = { version = "0.20.2", default-features = false }
