[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
dreammaker = { path = "../dreammaker" }
tinydmi = { path = "../tinydmi" }
indexmap = "2.0.2"
ahash = "0.8.6"
either = "1.9.0"
typed-arena = "2.0.2"
image = "0.24.7"
png = "0.17.10"
eyre = "0.6.8"
tracing = "0.1"

[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dev-dependencies]
walkdir = "2.4.0"
