[package]
name = "dmm-tools"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
dreammaker = { path = "../dreammaker" }
tinydmi = { path = "../tinydmi" }
indexmap = "2.2.5"
ahash = "0.8.11"
either = "1.10.0"
typed-arena = "2.0.2"
image = "0.25.0"
png = "0.17.13"
eyre = "0.6.12"
tracing = "0.1"
#imageproc = "0.23.0"

[dependencies.bytemuck]
version = "1.15.0"
features = ["derive"]

[dependencies.gfx_core]
version = "0.9.2"
optional = true

[dev-dependencies]
walkdir = "2.5.0"
