[package]
name = "dreamchecker"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
serde_json = "1.0"
ahash = "0.8.8"

[build-dependencies]
chrono = "0.4.34"
git2 = { version = "0.18.2", default-features = false }
