[package]
name = "dreamchecker"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
dreammaker = { path = "../dreammaker" }
serde_json = "1.0"
ahash = "0.8.11"

[build-dependencies]
chrono = "0.4.40"
git2 = { version = "0.20.1", default-features = false }
