[package]
name = "dreamchecker"
version = "1.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2024"

[dependencies]
dreammaker = { path = "../dreammaker" }
serde_json = "1.0"
ahash = "0.8.12"

[build-dependencies]
chrono = "0.4.41"
git2 = { version = "0.20.2", default-features = false }
