[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
bitflags = "2.6.0"
termcolor = "1.4.1"
ordered-float = "4.2.2"
serde = { version = "1.0.206", features = ["derive"] }
toml = "0.8.19"
phf = { version = "0.11.2", features = ["macros"] }
color_space = "0.5.4"
ahash = "0.8.11"
indexmap = "2.3.0"
get-size = { version = "0.1.4", features = ["derive"] }

[dev-dependencies]
walkdir = "2.5.0"
