[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
bitflags = "2.9.1"
termcolor = "1.4.1"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
phf = { version = "0.12.1", features = ["macros"] }
color_space = "0.5.4"
ahash = "0.8.12"
indexmap = "2.10.0"
get-size = { version = "0.1.4", features = ["derive"] }

[dev-dependencies]
walkdir = "2.5.0"
