[package]
name = "dreammaker"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2024"

[dependencies]
interval-tree = { path = "../interval-tree" }
builtins-proc-macro = { path = "../builtins-proc-macro" }
bitflags = "2.9.3"
termcolor = "1.4.1"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
phf = { version = "0.13.1", features = ["macros"] }
color_space = "0.5.4"
ahash = "0.8.12"
indexmap = "2.11.0"
get-size = { version = "0.1.4", features = ["derive"] }

[dev-dependencies]
walkdir = "2.5.0"
